[gd_scene load_steps=73 format=2]

[ext_resource path="res://assets/images/world/bomb_normal.png" type="Texture" id=1]
[ext_resource path="res://src/Obstacles/Bomb.gd" type="Script" id=2]
[ext_resource path="res://assets/images/world/bomb_twinkle.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 6.69617

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 128, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 256, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 384, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 512, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 640, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 0, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 128, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 256, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 384, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 512, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 640, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 0, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 128, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 256, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 384, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 512, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 640, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 0, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 128, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 256, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 384, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 512, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 640, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 3 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 3 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 3 )
region = Rect2( 128, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 3 )
region = Rect2( 256, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 3 )
region = Rect2( 384, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 3 )
region = Rect2( 512, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 3 )
region = Rect2( 640, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 3 )
region = Rect2( 0, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 3 )
region = Rect2( 128, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 3 )
region = Rect2( 256, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 3 )
region = Rect2( 384, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 3 )
region = Rect2( 512, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 3 )
region = Rect2( 640, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 3 )
region = Rect2( 0, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 3 )
region = Rect2( 128, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 3 )
region = Rect2( 256, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 3 )
region = Rect2( 384, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 3 )
region = Rect2( 512, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 3 )
region = Rect2( 640, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 3 )
region = Rect2( 0, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 3 )
region = Rect2( 128, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 3 )
region = Rect2( 256, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 3 )
region = Rect2( 384, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 3 )
region = Rect2( 512, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 3 )
region = Rect2( 640, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 3 )
region = Rect2( 0, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 3 )
region = Rect2( 128, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 3 )
region = Rect2( 256, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 3 )
region = Rect2( 384, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 3 )
region = Rect2( 512, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 3 )
region = Rect2( 640, 640, 128, 128 )

[sub_resource type="SpriteFrames" id=74]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "Idle",
"speed": 30.0
}, {
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ) ],
"loop": false,
"name": "Twinkle",
"speed": 30.0
} ]

[sub_resource type="CircleShape2D" id=75]
radius = 21.8038

[node name="Bomb" type="RigidBody2D"]
gravity_scale = 0.0
contacts_reported = 4
contact_monitor = true
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.172897, -0.172897 )
frames = SubResource( 74 )
animation = "Twinkle"
frame = 35
playing = true

[node name="ExplosionShape" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionShape"]
shape = SubResource( 75 )
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="sleeping_state_changed" from="." to="." method="_on_Bomb_sleeping_state_changed"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_animation_finished"]
